# poly

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  cmake-windows.yml
cmake/: AddPoly.cmake
include/poly/wm/: window_manager.h
lib/: CMakeLists.txt
lib/wm/: window_manager.cc
